--- a/lab7/lab7.adoc
+++ b/lab7/lab7.adoc
@@ -26,98 +26,85 @@
 --
 Написать программу, которая по отжатию на User Button зажигает все 4 светодиода, а по следующему отжатию тушит все 4 светодиода. Настроить правильно порты.
 --
-=== 1. Настройка портов
+=== 1 Настройка портов светодиодов
 
-Алгоритм: +
-1.Определить какой порт нужно использовать; +
-2.Подключить нужный порт к источнику частоты через регистр RCC→AHB1ENR; +
-3.Определить нужна ли какая-то специфическая скорость для конктретного порта и если да, настроить её (через регистр GPIOx_OSPEEDR); +
-4.Определить нужна ли подтяжка и какой тип выводов надо использовать (GPIOx_PUPDR и GPIOx_OTYPER); +
-5.Определить какие выводы портов нужно использовать как выход, а какие как вход; +
-6.Настроить нужные вывода порта на вход или выход (через регистр GPIOE→MODER). 
+*Алгоритм:*
 
-Для начала подключим порт к шине тактирования:
+* Определить какой порт нужно использовать
 
-[source,c]
+* Подключить нужный порт к источнику частоты через регистр RCC→AHB1ENR
+
+* Определить нужна ли какая-то специфическая скорость для конктретного порта и если да, настроить её (через регистр GPIOx_OSPEEDR)
+
+* Определить нужна ли подтяжка и какой тип выводов надо использовать (GPIOx_PUPDR и GPIOx_OTYPER)
+
+* Определить какие выводы портов нужно использовать как выход, а какие как вход
+
+* Настроить нужные вывода порта на вход или выход (через регистр GPIOE→MODER)
+
+Сначала подключим порт А к шине тактирования через регистр *RCC_AHB1ENR*
+
+.Подключение порта А
+image::4.png[]
+
+[source, c]
 ----
 // Подключить порт А к шине тактирования
 RCC::AHB1ENR::GPIOAEN::Enable::Set();
 ----
 
-Здесь мы подключили порт А к шине тактирования.
+Произведем настройку 5-ой линии порта А.
 
-Затем необходимо настроить нужный порт, например А5:
+* Есть несколько режимов скорости порта. В нашей работе достаточно 400 кГц, поэтому ставим по умолчанию Low speed.
 
-[source,c]
+.Настройка скорости порта
+image::5.png[]
+
+* Сделаем подтяжку резистора на 5 линию порта, чтобы не генерировать ложные переходы из-за наводки или шумов. Подтяжка обычно делается к 0 или к 1. Устанавливаем в бите значение 10 (Pull-down).
+
+.Подключение подтягивающего резистора
+image::6.png[]
+
+* Выбираем тип вывода (через регистр GPIOx_OTYPER →OT5) двухтактный повторитель Push-Pull.
+
+.Настройка типа вывода
+image::8.png[]
+
+ * Через регистр MODER настраиваем порт на вход или выход. В нашем случае на выход Output, так как используем светодиоды.
+
+.Настройка порта на вход или выход
+image::7.png[]
+
+Код настройки порта А.5:
+
+[source, c]
 ----
 // Настройка порта А.5
 GPIOA::OSPEEDR::OSPEEDR5::LowSpeed::Set();
-GPIOA::PUPDR::PUPDR5::PullUp::Set(); // подтяжка резистора на 5 линию, для не генерирования ложных переходов из-за шумов, подтяжка обычно делается к 0 или к 1, установили в бите значение 10 (Pull-down)
-GPIOA::OTYPER::OT5::OutputPushPull::Set(); // выбираем тип вывода (через регистр GPIOx_OTYPER →OT5) двухтактный повторитель Push-Pull
-GPIOA::MODER::MODER5::Output::Set(); // Через регистр MODER настраиваем порт на вход или выход. в нашем случае на выход Output, так как используем светодиоды
-----
-
-Здесь *GPIOA* означает, что мы работаем с портом A. + 
-
-*Зачем же нужна подтяжка?*
-
-Она нужна так как плавающий сигнал на подвешенной ножке может быть причиной следующих проблем:
-----
-* Разное значение при считывании (1 или 0) в разные моменты времени;
-* Ложные переходы (если настроено прерывание, то вы псотоянно будет входить в обработчик);
-* Повышенное потребление из-за того, что схема входного буфера для ножки потребляет ток когда сигнал на ножке не полностью High или Low.
-----
-Обычно подтягивают к 0 или 1.
-
-.Цифровой вход с подтяжкой к 1
-image::img1.png[]
-
-Регистр *GPIOx_OTYPER (port output type register)* определяет какой из выводов надо использовать. В нашем случае 5, поэтому мы пишем *OT5*. *Push-Pull (двухтактный)* или *Open Drain (выход с открытым коллектором)*.
-
-Затем через регистр *MODER* настраиваем порт на вход или выход. В нашем случае порт выдает свет на светодиоде, поэтому на выход, то есть:
-
-[source,c]
-----
+GPIOA::PUPDR::PUPDR5::PullUp::Set();
+GPIOA::OTYPER::OT5::OutputPushPull::Set();
 GPIOA::MODER::MODER5::Output::Set();
 ----
 
-Для кнопки *User_Button* настроим на вход, так как мы делаем нажатие. По рисунку 2 видно, что порт кнопки 13.
+* Аналогично настраиваем для остальных портов (C.5, C.8, C.9).
 
-.Схема подключения портов на плате STM32F411
-image::img2.png[]
+=== 2 Настройка порта кнопки
 
-Произведем аналогичную настройку для всех портов оставшихся светодиодов. Для кнопки сделаем свою настройку, так как у кнопки есть есть внешняя подтяжка, поэтому внутренняя не нужна.
+Теперь настроим порт для кнопки *User_Button*. На рисунке 9 видим, что необходимо настроить порт C.13.
 
-Листинг кода настройки портов для светодиодов и кнопки:
-[source,c]
+.Соответствие портов элементам платы STM32F411
+image::9.png[]
+
+* Установим скорость MediumSpeed, без поддтяжки, так как есть внешняя подтяжка. Тогда код настройки порта С.13:
+
+[source, c]
 ----
-// Подключить порт C к шине тактирования
-RCC::AHB1ENR::GPIOCEN::Enable::Set();
-
-// Настройка порта C.5
-GPIOC::OSPEEDR::OSPEEDR5::LowSpeed::Set();
-GPIOC::PUPDR::PUPDR5::PullUp::Set();
-GPIOC::OTYPER::OT5::OutputPushPull::Set();
-GPIOC::MODER::MODER5::Output::Set();
-
-// Настройка порта C.8
-GPIOC::OSPEEDR::OSPEEDR8::LowSpeed::Set();
-GPIOC::PUPDR::PUPDR8::PullUp::Set();
-GPIOC::OTYPER::OT8::OutputPushPull::Set();
-GPIOC::MODER::MODER8::Output::Set();
-
-// Настройка порта C.9
-GPIOC::OSPEEDR::OSPEEDR9::LowSpeed::Set();
-GPIOC::PUPDR::PUPDR9::PullUp::Set();
-GPIOC::OTYPER::OT9::OutputPushPull::Set();
-GPIOC::MODER::MODER9::Output::Set();
-
 // Настройка порта C.13
 GPIOC::OSPEEDR::OSPEEDR13::MediumSpeed::Set();
 GPIOC::MODER::MODER13::Input::Set();
 ----
 
-=== 2. Код программы
+=== 3. Код программы
 Напишем код, при котором при отжатии на кнопку будут загораться 4 светодиода, а при повторном ее отжатии они будут гаснуть.
 
 Листинг кода функции *main* представлен ниже:
