--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -96,3 +96,15 @@ image::7.jpg[]
 Внешние каналы поступают на мультиплексор, где выбирается только один из них. Т.е. в один момент времени может быть измерено напряжение только с одного канала.
 Результат преобразования сохраняется в регистрах данных. Для регулярных каналов это только один 16 битный регистр. Для инжектированных – 4. +
 Запуск преобразования может быть как программным, так и внешним. Внешний запуск может происходить от таймеров или с двух внешних входов.
+
+=== 6. Механизм DMA
+
+Прямой доступ к памяти (англ. direct memory access, DMA) — режим обмена данными между устройствами компьютера или же между устройством и основной памятью, в котором центральный процессор (ЦП) не участвует. Так как данные не пересылаются в ЦП и обратно, скорость передачи увеличивается. +
+Прямой доступ к памяти (DMA) используется для обеспечения высокоскоростной передачи данных между периферийными устройствами и памятью, а также между памятью и памятью. Данные могут быть быстро перемещены с помощью DMA без каких-либо действий процессора. Это позволяет освободить ресурсы процессора для других операций. +
+Контроллер DMA сочетает в себе мощную архитектуру двойной главной шины AHB с независимым FIFO для оптимизации пропускной способности системы на основе сложной архитектуры матрицы шин. +
+Основными функциями DMA являются:
+• Двойная архитектура главной шины AHB, одна из которых предназначена для доступа к памяти, а другая - для доступа к периферийным устройствам. +
+• Интерфейс программирования AHB slave, поддерживающий только 32-разрядный доступ. +
+• 8 потоков для каждого контроллера DMA, до 8 каналов (запросов) на поток
+• Глубина из четырех слов 32 буфера памяти первого входа и первого выхода (FIFO) на поток, которые можно
+использовать в режиме FIFO или в прямом режиме.
