--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -108,4 +108,8 @@ image::7.jpg[]
 • 8 потоков для каждого контроллера DMA, до 8 каналов (запросов) на поток. +
 • Глубина из четырех слов 32 буфера памяти первого входа и первого выхода (FIFO) на поток, которые можно
 использовать в режиме FIFO или в прямом режиме. +
+Из справочного руководства в таблице 28, можно увидеть к какому каналу подходит АЦП (рисунок 4).+
+
+image::8.jpg[]
+
 
